--- a/CSS-4day/opacity2.html
+++ b/CSS-4day/opacity2.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>배경이미지만 투명화</title>
+    </head>
+    <body>
+        <h2>이건 제목입니다.</h2>
+        <ul>
+            <li></li>
+        </ul>
+    </body>
 </html>
