--- a/CSS-4day/opacity2.html
+++ b/CSS-4day/opacity2.html
@@ -3,11 +3,35 @@
     <head>
         <meta charset="UTF-8">
         <title>배경이미지만 투명화</title>
+        <style>
+            div {
+                width: 400px;
+                height: 300px;
+                position: relative;
+                z-index: 1;
+            }
+            div::after {
+                content: "";
+                background-image: url("image/cat2.jpg");
+                background-size: cover;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                opacity: 0.5!important;
+                z-index: -1;
+            }
+        </style>
     </head>
     <body>
-        <h2>이건 제목입니다.</h2>
-        <ul>
-            <li></li>
-        </ul>
+        <div>
+            <h2>이건 제목입니다.</h2>
+            <ul>
+                <li>첫 번째 항목</li>
+                <li>두 번째 항목</li>
+                <li>세 번째 항목</li>
+            </ul>
+        </div>
     </body>
 </html>
