--- a/js-1day/operation.html
+++ b/js-1day/operation.html
@@ -65,10 +65,10 @@
         // console.log()를 사용해서 출력해보기
 
 
-        console.log("C에 대한 제곱근 "+Math.sqrt(c))
-        console.log("b-a의 절대값 "+Math.abs(b-a))
-        console.log("c의 소수점 2자리까지 표시 " + c.toFixed(2))
-        console.log("b를 정수로 표시 "+parseInt(b))
+        console.log("C에 대한 제곱근 : "+Math.sqrt(c))
+        console.log("b-a의 절대값 : "+Math.abs(b-a))
+        console.log("c의 소수점 2자리까지 표시 : " + c.toFixed(2))
+        console.log("b를 정수로 표시 : "+parseInt(b))
 
 
 
