복습및 추가 사항 정리

--- a/js-1day/Variable.html
+++ b/js-1day/Variable.html
@@ -15,11 +15,13 @@
     <!-- script -->
     <script>
         // 변수(variable) var : 변하는 수 (데이터를 저장하는 영역)
+        // 데이터를 저장하고 참조(사용)하는 데이터의 이름
+        // var, let, const
         var age = 20;
         // [데이터타입] [변수이름] = [변수값];
 
         var number1 = 10;   // number
-        var number2 = '10'; // string
+        var number2 = '10'; // string => ""를 사용한다. ''를 사용한다.
         var number3 = true; // boolean
 
         //데이터타입
