--- a/js-2day/condition.html
+++ b/js-2day/condition.html
@@ -36,5 +36,39 @@
                 console.log("C를 실행한다.");
             }
         */
+
+        var isAge = 25;
+        var esAge = 23;
+        var jiAge = 30;
+
+        if(isAge > jiAge) {
+            console.log("인성씨가 오빠일 것이다.")
+        }else {
+            console.log("지인씨가 누나일 것이다.")
+        }
+
+        var num1 = 5;
+        var num2 = 5;
+
+        if(num1>num2) {
+            console.log(num1 + "인 num1 이 크다")
+        } else if(num1<num2) {
+            console.log(num2 + "인 num2 이 크다")
+        } else {
+            console.log("num1과 num2가 같다")
+        }
+
+        // else if
+        /*
+        if(ConditionA){
+            B를 실행   : 조건A를 만족할 경우 실행
+        } else if(ConditionD) {
+            E를 실행   : 조건D를 만족할 경우 실행
+        } else {
+            C를 실행   : 조건 A와 조건 D를 모두 만족하지 않을 경우
+        }
+
+        */
+
     </script>
 </html>
