--- a/js-5day/event.html
+++ b/js-5day/event.html
@@ -20,7 +20,7 @@
    </head>
 
    <!-- body -->
-   <!-- <body onload="alert('로딩완료!')"> -->
+   <!-- <body onload="alert('gd')"> -->
     <body>
         <div id="mouse" onmouseover="mouseEvent('over')" onmouseout="mouseEvent('out')">
 
