--- a/CSS-5day/flex2.html
+++ b/CSS-5day/flex2.html
@@ -7,14 +7,13 @@
         .fcont {
             margin: 10px;
             padding: 15px;
-            height: 500px;
             border-radius: 5px;
             background-color: aquamarine;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
+            align-content: flex-start;
             /* justify-content: space-evenly; */
-            align-content: stretch;
         }
         .fi {
             margin: 10px;
@@ -23,6 +22,25 @@
             background-color: cadetblue;
             border-radius: 5px;
             font-size: 30px;
+            flex-basis: 50px;
+            /* width: 50px; */
+            /* flex-grow: 1; */
+        }
+        .fi:nth-child(1) {
+            flex-grow: 1;
+            flex-shrink: 2;
+            width: 80px;
+            order: 3;
+        }
+        .fi:nth-child(2) {
+            flex-grow: 2;
+            order: 1;
+        }
+        .fi:nth-child(3) {
+            flex-grow: 1;
+            order: 2;
+            /* transform: scale(2); */
+            /* border: 3px solid black; */
         }
     </style>
 </head>
