--- a/CSS-5day/transform.html
+++ b/CSS-5day/transform.html
@@ -10,7 +10,7 @@
                 border: 1px solid black;
                 background-color: red;
                 margin-left: 50px;
-                transition: transform 2s;
+                transition: transform 2s, width 1s;
             }
             .b1:hover {
                 /* transform: translate(20px, -10px); */
@@ -30,8 +30,9 @@
             .b4:hover {
                 /* transform: skew(20deg, 20deg); */
                 transform: skewY(40deg);
-                
-
+            }
+            .b5:hover {
+                width: 100px;
             }
         </style>
     </head>
@@ -44,5 +45,7 @@
         <div class="b3">1</div>
         <h3>기울기 변환</h3>
         <div class="b4">1</div>
+        <h3>기울기 변환2</h3>
+        <div class="b5">1</div>
     </body>
 </html>
