--- a/javascript-1day/exam02.html
+++ b/javascript-1day/exam02.html
@@ -19,8 +19,35 @@
         <input id="nin2" type="number">
         <button onclick="exam2()">입력</button><br>
         <span id="nout2"></span>
+        <hr>
+        <h1>문제3</h1>
+        <p>키와 몸무게를 입력받아서 비만여부를
+            판단하는 프로그램을 작성하시오.<br>
+              - 표준 이상일 경우 : 다이어트가 필요한 수 있습니다!<br>
+              - 표준 미만일 경우 : 표준(또는 마른) 체형입니다!<br>
+        </p>
+        키: <input type="number" id="hei"><br>
+        몸무게 : <input type="number" id="we"><br>
+        <button onclick="f1()">입력</button><br>
+        <span id="out3"></span>
+        <hr>
+        <h2>번외. 요소의 innerHTML과 innerText</h2>
+        <span id="s1"><b>이런내용</b></span><br>
+        <span id="s2"><b>저런내용</b></span>
     </body>
     <script>
+        //번외 스크립트
+        const s_1 = document.getElementById('s1'); 
+        const s_2 = document.getElementById('s2');
+        console.log(s_1.innerHTML);
+        console.log(s_2.innerText);
+        s_1.innerHTML="<i>바뀐 내용1</i>"
+        s_2.innerText="<i>바뀐 내용2</i>"
+
+
+
+
+
         //출력용 span 요소를 가져와서 변수에 저장
         const noutSpan = document.getElementById('nout') 
         //입력용 input 요소를 가져와서 변수에 저장
@@ -53,6 +80,25 @@
             out2.innerHTML=`${inNum}까지의 누적합은 ${sum}입니다.`;
             in2_v.value = '';
         }  
+/////////////////////////////////////////////////////////////////////////////////////////
+        //문제3 스크립트
+        const hei = document.getElementById('hei');
+        const we = document.getElementById('we');
+        const o3 = document.getElementById('out3');
+
+        const f1 = function(){ // 익명함수
+            let h = hei.value;
+            let w = we.value;
+            let s = (h-100) * 0.9;
+
+            if(w>s) { // 표준 이상이면
+                o3.innerHTML = '다이어트가 필요합니다'
+            }else { //표준 미만이면
+                o3.innerHTML = '표준(마른) 입니다'
+            }
+            hei.value =''
+            we.value =''
+        }
 
 
     </script>
