--- a/javascript-4day/loop_break.html
+++ b/javascript-4day/loop_break.html
@@ -17,14 +17,28 @@
             while(true) { //무한 루프
                 m = prompt("3이 아닌 값을 입력하세요.")
                 if(m == 3) {
+                    continue
+                }
+                if(sum >= 50){
                     break;
                 }
                 sum += Number(m)
+                console.log(m)
+                console.log(sum)
                 i++
             }
             document.write(`입력한 값의 총합은 ${sum}입니다.`)
             document.write(`실행 횟수는 ${i}번`)
         })
+
+        let ss = 0;
+        for(let j=0; j < 100; j++){
+            if(j % 4 == 0){
+                continue;
+            }
+            ss += j;
+        }
+        console.log(ss)
 
 
         // let v = 0;
