--- a/javascript-4day/test.html
+++ b/javascript-4day/test.html
@@ -7,7 +7,7 @@
     <body>
         <fieldset style="width: 500px;">
             <legend>가위바위보</legend>
-            <p id="computer"></p>
+            <p>컴퓨터 : <span id="computer"></span></p>
             <button>가위</button>
             <button>바위</button>
             <button>보</button>
@@ -23,10 +23,10 @@
         const res = document.getElementById('res')
         const game = ["가위","바위","보"]
         
-        let com = setInterval(() => {
-            comNum = Math.floor((Math.random() * 3));
+        let com = setInterval(function() {
+            comNum = Math.floor(Math.random() * 3);
             computer.innerHTML=game[comNum]
-            }, 100);
+            }, 10);
 
             btns[0].addEventListener('click', function() {
                 if(res.innerHTML==""){
